overlays/prod/monitoring/monitoring-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: yapp-monitoring-ingressroute-https
  namespace: prod
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`yapp-monitoring.suitestudy.com`)
      kind: Rule
      services:
        - name: grafana-service
          port: 3000
  tls:
    secretName: yapp-monitoring-tls-cert
